bad/mul_invalid_types_string_int.example_compiler_output
ERROR
[1mbad/mul_invalid_types_string_int.lat:3:8: [1;31merror: [0;1msyntax error at *[m
	"" * (*1);
	      [1;32m^[m
